@startuml
' Рис. 2.6. Концептуальна (ER) модель даних системи
skinparam shadowing false
skinparam defaultFontName "Times New Roman"
skinparam defaultFontSize 11
hide circle
skinparam linetype ortho
skinparam entity {
    BackgroundColor #f5f5f5
    BorderColor #333333
}

entity "Profile" as Profile {
    * id : Integer <<PK>>
    --
    code : String
    name : String
    description : Text
}

entity "Criterion" as Criterion {
    * id : Integer <<PK>>
    --
    code : String
    name : String
    unit : String
    optimizationType : Enum
    scale : Enum
}

entity "PairwiseMatrixCell" as PWM {
    * profile_id : Integer <<FK>>
    * criterion_i : Integer <<FK>>
    * criterion_j : Integer <<FK>>
    --
    l : Decimal
    m : Decimal
    u : Decimal
}

entity "Location" as Location {
    * id : Integer <<PK>>
    --
    name : String
    address : String
    district : String
    geometry : Point(WGS84)
}

entity "ExistingStation" as Station {
    * id : Integer <<PK>>
    --
    name : String
    powerKW : Decimal
    connectorType : String
    geometry : Point(WGS84)
}

entity "EvaluationRun" as Run {
    * id : Integer <<PK>>
    --
    profile_id : Integer <<FK>>
    createdAt : Timestamp
    status : Enum
    weightsVector : JSON
    executionTimeMs : Integer
}

entity "RankingItem" as Rank {
    * evaluation_id : Integer <<FK>>
    * location_id : Integer <<FK>>
    --
    rank : Integer
    closenessCoefficient : Decimal
    distanceToPositive : Decimal
    distanceToNegative : Decimal
}

entity "SensitivityRecord" as Sens {
    * evaluation_id : Integer <<PK,FK>>
    --
    iterations : Integer
    perturbation : Decimal
    stabilityMatrix : JSON
    confidenceIntervals : JSON
}

Profile ||--o{ PWM
Criterion ||--o{ PWM
Profile ||--o{ Run
Run ||--o{ Rank
Run ||--|| Sens
Location ||--o{ Rank

@enduml
